@@ -7,7 +7,6 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
@@ -106,11 +105,15 @@ public class PipelineProcessor {
             Map<String, Object> parameters = pipelineOperation.getParameters();
             List<String> inputFileTypes = apiDocService.getExtensionTypes(false, operation);
             if (inputFileTypes == null) {
-                inputFileTypes = new ArrayList<String>(Arrays.asList("ALL"));
+                inputFileTypes = new ArrayList<>(List.of("ALL"));
             }
-            if (!operation.matches("^[a-zA-Z0-9_-]+$")) {
-                throw new IllegalArgumentException("Invalid operation value received.");
+
+            if (!apiDocService.isValidOperation(operation, parameters)) {
+                log.error("Invalid operation or parameters: o:{} p:{}", operation, parameters);
+                throw new IllegalArgumentException(
+                        "Invalid operation: " + operation + " with parameters: " + parameters);
             }
+
             String url = getBaseUrl() + operation;
             List<Resource> newOutputFiles = new ArrayList<>();
             if (!isMultiInputOperation) {
@@ -136,7 +139,7 @@ public class PipelineProcessor {
                             // skip
                             // this
                             // file
-                            if (operation.startsWith("filter-")
+                            if (operation.startsWith("/api/v1/filter/filter-")
                                     && (response.getBody() == null
                                             || response.getBody().length == 0)) {
                                 filtersApplied = true;
