@@ -1,12 +1,14 @@
 package stirling.software.SPDF.controller.api;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.Mockito.*;
 
 import java.io.IOException;
 import java.lang.reflect.Method;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import org.apache.pdfbox.pdmodel.PDDocument;
@@ -21,6 +23,7 @@ import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.http.MediaType;
 import org.springframework.mock.web.MockMultipartFile;
 import org.springframework.web.multipart.MultipartFile;
 
@@ -29,11 +32,9 @@ import stirling.software.common.service.CustomPDFDocumentFactory;
 @ExtendWith(MockitoExtension.class)
 class MergeControllerTest {
 
-    @Mock
-    private CustomPDFDocumentFactory pdfDocumentFactory;
+    @Mock private CustomPDFDocumentFactory pdfDocumentFactory;
 
-    @InjectMocks
-    private MergeController mergeController;
+    @InjectMocks private MergeController mergeController;
 
     private MockMultipartFile mockFile1;
     private MockMultipartFile mockFile2;
@@ -47,9 +48,24 @@ class MergeControllerTest {
 
     @BeforeEach
     void setUp() {
-        mockFile1 = new MockMultipartFile("file1", "document1.pdf", "application/pdf", "PDF content 1".getBytes());
-        mockFile2 = new MockMultipartFile("file2", "document2.pdf", "application/pdf", "PDF content 2".getBytes());
-        mockFile3 = new MockMultipartFile("file3", "chapter3.pdf", "application/pdf", "PDF content 3".getBytes());
+        mockFile1 =
+                new MockMultipartFile(
+                        "file1",
+                        "document1.pdf",
+                        MediaType.APPLICATION_PDF_VALUE,
+                        "PDF content 1".getBytes());
+        mockFile2 =
+                new MockMultipartFile(
+                        "file2",
+                        "document2.pdf",
+                        MediaType.APPLICATION_PDF_VALUE,
+                        "PDF content 2".getBytes());
+        mockFile3 =
+                new MockMultipartFile(
+                        "file3",
+                        "chapter3.pdf",
+                        MediaType.APPLICATION_PDF_VALUE,
+                        "PDF content 3".getBytes());
 
         mockDocument = mock(PDDocument.class);
         mockMergedDocument = mock(PDDocument.class);
@@ -85,12 +101,15 @@ class MergeControllerTest {
         when(doc3.getNumberOfPages()).thenReturn(2);
 
         // When
-        Method addTableOfContentsMethod = MergeController.class.getDeclaredMethod("addTableOfContents", PDDocument.class, MultipartFile[].class);
+        Method addTableOfContentsMethod =
+                MergeController.class.getDeclaredMethod(
+                        "addTableOfContents", PDDocument.class, MultipartFile[].class);
         addTableOfContentsMethod.setAccessible(true);
         addTableOfContentsMethod.invoke(mergeController, mockMergedDocument, files);
 
         // Then
-        ArgumentCaptor<PDDocumentOutline> outlineCaptor = ArgumentCaptor.forClass(PDDocumentOutline.class);
+        ArgumentCaptor<PDDocumentOutline> outlineCaptor =
+                ArgumentCaptor.forClass(PDDocumentOutline.class);
         verify(mockCatalog).setDocumentOutline(outlineCaptor.capture());
 
         PDDocumentOutline capturedOutline = outlineCaptor.getValue();
@@ -121,7 +140,9 @@ class MergeControllerTest {
         when(doc1.getNumberOfPages()).thenReturn(3);
 
         // When
-        Method addTableOfContentsMethod = MergeController.class.getDeclaredMethod("addTableOfContents", PDDocument.class, MultipartFile[].class);
+        Method addTableOfContentsMethod =
+                MergeController.class.getDeclaredMethod(
+                        "addTableOfContents", PDDocument.class, MultipartFile[].class);
         addTableOfContentsMethod.setAccessible(true);
         addTableOfContentsMethod.invoke(mergeController, mockMergedDocument, files);
 
@@ -138,7 +159,9 @@ class MergeControllerTest {
         when(mockMergedDocument.getDocumentCatalog()).thenReturn(mockCatalog);
 
         // When
-        Method addTableOfContentsMethod = MergeController.class.getDeclaredMethod("addTableOfContents", PDDocument.class, MultipartFile[].class);
+        Method addTableOfContentsMethod =
+                MergeController.class.getDeclaredMethod(
+                        "addTableOfContents", PDDocument.class, MultipartFile[].class);
         addTableOfContentsMethod.setAccessible(true);
         addTableOfContentsMethod.invoke(mergeController, mockMergedDocument, files);
 
@@ -155,7 +178,8 @@ class MergeControllerTest {
 
         when(mockMergedDocument.getDocumentCatalog()).thenReturn(mockCatalog);
         when(mockMergedDocument.getNumberOfPages()).thenReturn(4);
-        when(mockMergedDocument.getPage(anyInt())).thenReturn(mockPage1); // Use anyInt() to avoid stubbing conflicts
+        when(mockMergedDocument.getPage(anyInt()))
+                .thenReturn(mockPage1); // Use anyInt() to avoid stubbing conflicts
 
         // First document loads successfully
         PDDocument doc1 = mock(PDDocument.class);
@@ -163,16 +187,18 @@ class MergeControllerTest {
         when(doc1.getNumberOfPages()).thenReturn(2);
 
         // Second document throws IOException
-        when(pdfDocumentFactory.load(mockFile2)).thenThrow(new IOException("Failed to load document"));
+        when(pdfDocumentFactory.load(mockFile2))
+                .thenThrow(new IOException("Failed to load document"));
 
         // When
-        Method addTableOfContentsMethod = MergeController.class.getDeclaredMethod("addTableOfContents", PDDocument.class, MultipartFile[].class);
+        Method addTableOfContentsMethod =
+                MergeController.class.getDeclaredMethod(
+                        "addTableOfContents", PDDocument.class, MultipartFile[].class);
         addTableOfContentsMethod.setAccessible(true);
 
         // Should not throw exception
-        assertDoesNotThrow(() ->
-            addTableOfContentsMethod.invoke(mergeController, mockMergedDocument, files)
-        );
+        assertDoesNotThrow(
+                () -> addTableOfContentsMethod.invoke(mergeController, mockMergedDocument, files));
 
         // Then
         verify(mockCatalog).setDocumentOutline(any(PDDocumentOutline.class));
@@ -184,7 +210,12 @@ class MergeControllerTest {
     @Test
     void testAddTableOfContents_FilenameWithoutExtension_UsesFullName() throws Exception {
         // Given
-        MockMultipartFile fileWithoutExtension = new MockMultipartFile("file", "document_no_ext", "application/pdf", "PDF content".getBytes());
+        MockMultipartFile fileWithoutExtension =
+                new MockMultipartFile(
+                        "file",
+                        "document_no_ext",
+                        MediaType.APPLICATION_PDF_VALUE,
+                        "PDF content".getBytes());
         MultipartFile[] files = {fileWithoutExtension};
 
         when(mockMergedDocument.getDocumentCatalog()).thenReturn(mockCatalog);
@@ -196,7 +227,9 @@ class MergeControllerTest {
         when(doc.getNumberOfPages()).thenReturn(1);
 
         // When
-        Method addTableOfContentsMethod = MergeController.class.getDeclaredMethod("addTableOfContents", PDDocument.class, MultipartFile[].class);
+        Method addTableOfContentsMethod =
+                MergeController.class.getDeclaredMethod(
+                        "addTableOfContents", PDDocument.class, MultipartFile[].class);
         addTableOfContentsMethod.setAccessible(true);
         addTableOfContentsMethod.invoke(mergeController, mockMergedDocument, files);
 
@@ -218,13 +251,14 @@ class MergeControllerTest {
         when(doc1.getNumberOfPages()).thenReturn(3);
 
         // When
-        Method addTableOfContentsMethod = MergeController.class.getDeclaredMethod("addTableOfContents", PDDocument.class, MultipartFile[].class);
+        Method addTableOfContentsMethod =
+                MergeController.class.getDeclaredMethod(
+                        "addTableOfContents", PDDocument.class, MultipartFile[].class);
         addTableOfContentsMethod.setAccessible(true);
 
         // Should not throw exception
-        assertDoesNotThrow(() ->
-            addTableOfContentsMethod.invoke(mergeController, mockMergedDocument, files)
-        );
+        assertDoesNotThrow(
+                () -> addTableOfContentsMethod.invoke(mergeController, mockMergedDocument, files));
 
         // Then
         verify(mockCatalog).setDocumentOutline(any(PDDocumentOutline.class));
@@ -247,8 +281,8 @@ class MergeControllerTest {
         when(pdfDocumentFactory.createNewDocument()).thenReturn(mockMergedDocument);
         when(doc1.getPages()).thenReturn(pages1);
         when(doc2.getPages()).thenReturn(pages2);
-        when(pages1.iterator()).thenReturn(Arrays.asList(page1).iterator());
-        when(pages2.iterator()).thenReturn(Arrays.asList(page2).iterator());
+        when(pages1.iterator()).thenReturn(Collections.singletonList(page1).iterator());
+        when(pages2.iterator()).thenReturn(Collections.singletonList(page2).iterator());
 
         // When
         PDDocument result = mergeController.mergeDocuments(documents);
@@ -263,7 +297,7 @@ class MergeControllerTest {
     @Test
     void testMergeDocuments_EmptyList_ReturnsEmptyDocument() throws IOException {
         // Given
-        List<PDDocument> documents = Arrays.asList();
+        List<PDDocument> documents = List.of();
 
         when(pdfDocumentFactory.createNewDocument()).thenReturn(mockMergedDocument);
 
@@ -275,5 +309,4 @@ class MergeControllerTest {
         assertEquals(mockMergedDocument, result);
         verify(mockMergedDocument, never()).addPage(any(PDPage.class));
     }
-
 }
